add js logic to search a pokemon

--- a/style.css
+++ b/style.css
@@ -30,3 +30,24 @@
   border-radius: 50%;
   background-color: chocolate;
 }
+
+.cont {
+  border: 1px solid gray;
+  width: 150px;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  margin: 10rem;
+  transition: 200ms;
+}
+
+.cont:hover {
+  cursor: pointer;
+  box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.141);
+}
+
+.cont h1 {
+  color: red;
+}
