--- a/style.css
+++ b/style.css
@@ -32,22 +32,37 @@
 }
 
 .cont {
-  border: 1px solid gray;
+  border: 1px solid rgba(128, 128, 128, 0.6);
   width: 150px;
   height: 200px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 15px;
-  margin: 10rem;
+  margin: 1rem auto;
   transition: 200ms;
 }
 
 .cont:hover {
   cursor: pointer;
-  box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.141);
+  box-shadow: 0px 5px 10px 3px rgba(0, 0, 0, 0.1);
+}
+
+.cont img {
+  width: auto;
 }
 
 .cont h1 {
-  color: red;
+  color: grey;
+  width: 100%;
+  text-align: center;
+}
+
+.input {
+  display: block;
+  margin: 1rem auto;
+  padding: 0.5rem;
+  border-radius: 16px;
+  border: 1px solid rgba(128, 128, 128, 0.6);
 }
